--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="p5.js"></script>
     <script src="sketch.js"></script>
     <script src="pattern.js"></script>
-
+    <title>10PR!N+</title>
 </head>
 
 <body>
