added bells, todo: whistles

--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <script src="p5.js"></script>
     <script src="sketch.js"></script>
     <script src="pattern.js"></script>
     <title>10PR!N+</title>
-</head>
+    <link rel="stylesheet" href="index.css" />
+  </head>
 
-<body>
-    <div id="APP">
-
-    </div>
-</body>
-
+  <body>
+    <div id="APP"></div>
+  </body>
 </html>
